--- a/index.html
+++ b/index.html
@@ -9,93 +9,95 @@
 </head>
 
 <body>
-  <!-- 头部的盒子 -->
-  <header>
-    <h1>数据可视化练习-ECharts</h1>
-    <div class="showTime"></div>
-    <script>
-      let t = null;
-      t = setTimeout(time, 1000); //開始运行
-      function time() {
-        clearTimeout(t); //清除定时器
-        dt = new Date();
-        let y = dt.getFullYear();
-        let mt = dt.getMonth() + 1;
-        let day = dt.getDate();
-        let h = dt.getHours(); //获取时
-        let m = dt.getMinutes(); //获取分
-        let s = dt.getSeconds(); //获取秒
-        document.querySelector(".showTime").innerHTML =
-          `当前时间${y}年${mt}月${day}日-${h}时${m}分${s}秒`
-        t = setTimeout(time, 1000); //设定定时器，循环运行
-      }
-    </script>
+  <div id=gyroContain>
+    <!-- 头部的盒子 -->
+    <header>
+      <h1>数据可视化练习-ECharts</h1>
+      <div class="showTime"></div>
+      <script>
+        let t = null;
+        t = setTimeout(time, 1000); //開始运行
+        function time() {
+          clearTimeout(t); //清除定时器
+          dt = new Date();
+          let y = dt.getFullYear();
+          let mt = dt.getMonth() + 1;
+          let day = dt.getDate();
+          let h = dt.getHours(); //获取时
+          let m = dt.getMinutes(); //获取分
+          let s = dt.getSeconds(); //获取秒
+          document.querySelector(".showTime").innerHTML =
+            `当前时间${y}年${mt}月${day}日-${h}时${m}分${s}秒`
+          t = setTimeout(time, 1000); //设定定时器，循环运行
+        }
+      </script>
 
-  </header>
+    </header>
 
-  <!-- 页面主体部分 -->
-  <section class="mainbox">
-    <div class="column">
-      <div class="panel bar">
-        <h2>柱形图-就业行业</h2>
-        <div class="chart"></div>
-        <div class="panel-footer"></div>
-      </div>
-      <div class="panel line">
-        <h2>
-          折线图-人员变化 <a href="javacript:;">2020</a><a href="javascript:;">2021</a>
-        </h2>
-        <div class="chart">图表</div>
-        <div class="panel-footer"></div>
-      </div>
-      <div class="panel pie">
-        <h2>饼形图-年龄分布</h2>
-        <div class="chart">图表</div>
-        <div class="panel-footer"></div>
-      </div>
-    </div>
-    <div class="column">
-      <!-- no模块制作 -->
-      <div class="no">
-        <div class="no-hd">
-          <ul>
-            <li>123811</li>
-            <li>98134</li>
-          </ul>
+    <!-- 页面主体部分 -->
+    <section class="mainbox">
+      <div class="column">
+        <div class="panel bar">
+          <h2>柱形图-就业行业</h2>
+          <div class="chart"></div>
+          <div class="panel-footer"></div>
         </div>
-        <div class="no-bd">
-          <ul>
-            <li>前端需求人数</li>
-            <li>市场供应人数</li>
-          </ul>
+        <div class="panel line">
+          <h2>
+            折线图-人员变化 <a href="javacript:;">2020</a><a href="javascript:;">2021</a>
+          </h2>
+          <div class="chart">图表</div>
+          <div class="panel-footer"></div>
+        </div>
+        <div class="panel pie">
+          <h2>饼形图-年龄分布</h2>
+          <div class="chart">图表</div>
+          <div class="panel-footer"></div>
         </div>
       </div>
-      <!-- 地图模块 -->
-      <div class="map">
-        <div class="map1"></div>
-        <div class="map2"></div>
-        <div class="map3"></div>
-        <div class="chart"></div>
+      <div class="column">
+        <!-- no模块制作 -->
+        <div class="no">
+          <div class="no-hd">
+            <ul>
+              <li>123811</li>
+              <li>98134</li>
+            </ul>
+          </div>
+          <div class="no-bd">
+            <ul>
+              <li>前端需求人数</li>
+              <li>市场供应人数</li>
+            </ul>
+          </div>
+        </div>
+        <!-- 地图模块 -->
+        <div class="map">
+          <div class="map1"></div>
+          <div class="map2"></div>
+          <div class="map3"></div>
+          <div class="chart"></div>
+        </div>
       </div>
-    </div>
-    <div class="column">
-      <div class="panel bar2">
-        <h2>柱形图-就业行业</h2>
-        <div class="chart">图表</div>
-        <div class="panel-footer"></div>
+      <div class="column">
+        <div class="panel bar2">
+          <h2>柱形图-就业行业</h2>
+          <div class="chart">图表</div>
+          <div class="panel-footer"></div>
+        </div>
+        <div class="panel line2">
+          <h2>折线图-播放量</h2>
+          <div class="chart">图表</div>
+          <div class="panel-footer"></div>
+        </div>
+        <div class="panel pie2">
+          <h2>饼形图-地区分布</h2>
+          <div class="chart">图表</div>
+          <div class="panel-footer"></div>
+        </div>
       </div>
-      <div class="panel line2">
-        <h2>折线图-播放量</h2>
-        <div class="chart">图表</div>
-        <div class="panel-footer"></div>
-      </div>
-      <div class="panel pie2">
-        <h2>饼形图-地区分布</h2>
-        <div class="chart">图表</div>
-        <div class="panel-footer"></div>
-      </div>
-    </div>
-  </section>
+    </section>
+  </div>
   <script src="js/flexible.js"></script>
   <script src="js/echarts.min.js"></script>
   <!-- 先引入jquery -->
